# Capsian-Engine

./: .gitignore  LICENSE  LICENSE.txt  README.md  RunNT.bat  WinConsole.bat  WinRuntime.bat  \  capsian.json  console.py  disassembler.py  disassembly.txt  locals.py  main.py  options.cpsn  options.kson  prepare.py  pyproject.toml  temp.kfel  things to do and not to do.txt  tzylang.py  windows.bat
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-26_17-15-43/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-29_18-32-33/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-09-30_22-03-21/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-02_14-27-17/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2020-10-02_17-16-39/: details.md  results.csv  results.md  results.txt
Capsian/: __init__.py  engine.py  log.py  services.py  values.py
Capsian/GUI/: __init__.py  (+2 more)
CapsianLine/: capsianline.py  ccerror.py  cclexer.py  ccparser.py  design.py  paths.json
Capsianline/: capsianline.py  ccerror.py  cclexer.py  ccparser.py  design.py
KeyFire/: __init__.py  engine.py  log.py  values.py
addons/: __init__.py
autowin/: README.md  defaults.json  setup.json
example/: __init__.py  data.py  flashing_light.py  main.py  map_generator.py  movement.py  setup.py  time.py
f/: ccerror.py
line/: README.md  setup.json
scripts/: __init__.py  altar.py  carpal.py  declarations.kfel  empty.kfel  objects.kfel  options.kson  script.kfel  script.py  vaporwave.py
(+194 files in other folders)
